<resources>
    <string name="app_name">KeepingDesignHistory</string>

    <string name="prompt_person_name">Name</string>
    <string name="prompt_person_phno">Phone No</string>
    <string name="prompt_person_email">Email</string>
    <string name="prompt_person_address">Address</string>
    <string name="btn_name_person_register">Register</string>
    <string name="btn_name_person_update">Update</string>
    <string name="btn_name_person_delete">Delete</string>

    <!-- Process Status Message -->
    <string name="register_success">Register Successful!</string>
    <string name="register_failed">Register Failed!</string>
    <string name="update_success">Update Successful!</string>
    <string name="update_failed">Update Failed!</string>
    <string name="delete_success">Delete Successful!</string>
    <string name="delete_failed">Delete Failed!</string>
</resources>
